# Qt5PropertyBinding

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  RedRect.cpp  RedRect.h  Widget.cpp  Widget.h  main.cpp
src/: CMakeLists.txt  QProperty.cpp
src/include/: QProperty.h  QPropertyDef.h  QPropertyPrivate.h  QTaggedPointer.h  QTypeInfoExtension.h
src/include/private/: QProperty_p.h
